# AmigaMotoX

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  sim
include/: cpu.h  display.h  input.h  memory_helper.h  memory_map.h  queue.h  tty.h
libmusashi/include/: m68k.h
roms/hello-world/: Makefile  hello.bin.elf  simNo
roms/hello-world/src/: hello.c  vectors.c
src/: cpu.c  cpu_read.c  cpu_write.c  input.c  main.c  memory_helper.c  queue.c  sdl_display.c  sdl_input.c  tty.c
